# OOP-assignment

./: .gitignore  CMakeLists.txt  CS213_A1_P1_SX_20242296_20240092_20240256.cpp  CS213_A1_Part1_SectionX_20242296_20240092_20240256.cpp  CS213_A1_Part2_S30_20242296_20240092_20240256.cpp  CS213_A1_S30_20242296_20240092_20240256.cpp  GUI.cpp  README.md  assign.cpp  main.cpp  mainVS.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  start.cpp
sayed assignment oop/: CMakeLists.txt  CMakePresets.json  assignment.cpp  stb_image_write.h
